--- a/PhotoSel/Controls/SourceSelectionControl.xaml
+++ b/PhotoSel/Controls/SourceSelectionControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" >
     <Grid u:GridUtils.ColumnDefinitions="Auto,*,Auto,Auto">
         <TextBlock Text="Folder:" VerticalAlignment="Center" />
-        <TextBox Grid.Column="1" Text="{Binding SourceFolder}" MinWidth="120" Margin="5 0 0 0" />
+        <TextBox Grid.Column="1" Text="{Binding SourceFolder, UpdateSourceTrigger=PropertyChanged}" MinWidth="120" Margin="5 0 0 0" />
         <Button Grid.Column="2" Command="{Binding BrowseForSourceFolderCommand}" Content="..." Margin="0 0 0 0" Padding="5 2" />
         <Button Grid.Column="3" Command="{Binding LoadFolderCommand}" Content="Load" Margin="5 0 0 0" Padding="5 2" />
     </Grid>
